[package]
name = "ebyte-e32-ui"
version = "0.4.0"
edition = "2021"
description = "CLI + GUI for interacting with EByte E32 LoRa modules"
license-file = "LICENSE"
repository = "https://github.com/barafael/ebyte-e32-ui"
default-run = "ebyte-e32-gui"

[[bin]]
name = "ebyte-e32-cli"
path = "bin/cli.rs"

[[bin]]
name = "ebyte-e32-gui"
path = "bin/gui.rs"

[dependencies]
anyhow = "1.0.66"
clap = { version = "3.1.14", features = ["derive"] }
#ebyte-e32 = { git = "https://github.com/barafael/ebyte-e32-rs", rev = "fee291a427df8e7c55e8dc154e181257ebb52a41", features = [
#"arg_enum",
#] }
ebyte-e32 = { version = "0.8.0", features = ["value_enum"] }
embedded-hal = "0.2.7"
klask = "1"
linux-embedded-hal = "0.3.2"
nb = "1.0.0"
rustyline = "10.0.0"
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
